Fix header wrap issue on iOS

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -64,6 +64,7 @@ header.home {
 .site-title {
     font-family: 'Merriweather', serif;
     font-weight: 900;
+    white-space: nowrap;
 
     position: absolute;
     bottom: 40px;
